# Player

./: .envrc  .gitignore  README.md  album.go  api.go  book.go  common.h  components.d.ts  filebrowserwidget.cpp  filebrowserwidget.h  gen_cover.sh  go.mod  index.html  main.go  mainwindow.cpp  mainwindow.h  meson.build  movie.go  musicplayerwidget.cpp  musicplayerwidget.h  package.json  player.cpp  pnpm-lock.yaml  query.go  singles.go  test_all_api.sh  tools_test.go  util.go  vite.config.ts
.zed/: settings.json
Player/: AppDelegate.swift  ContentView.swift  MusicModel.swift  PlayerApp.swift  SettingsView.swift
Player.xcodeproj/: project.pbxproj
Player.xcodeproj/project.xcworkspace/xcuserdata/jask.xcuserdatad/: UserInterfaceState.xcuserstate
Player.xcodeproj/project.xcworkspace/xcuserdata/songguanjie.xcuserdatad/: UserInterfaceState.xcuserstate
Player.xcodeproj/xcshareddata/xcschemes/: Player.xcscheme  Release.xcscheme
Player.xcodeproj/xcuserdata/jask.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Player/Assets.xcassets/AppIcon.appiconset/: Contents.json
PlayerTests/: PlayerTests.swift
PlayerUITests/: PlayerUITests.swift  PlayerUITestsLaunchTests.swift
core/: playercontroller.cpp  playercontroller.h
db/: album.go  api.go  book.go  db.go  movie.go  query.go  singles.go
llm/: api.go  provider.go  simple_tools.go  template.go  tools.go
qml/: Main.qml
src/: App.vue  app.qrc  main.ts  player.cpp  style.css  vite-env.d.ts
src/components/: Books.vue  MainPage.vue  Movies.vue  Music.vue
src/services/: api.ts  types.ts
util/: query.go  util.go
(+1 files in other folders)
